tests/negative/typecheck/args_mix.orng
// args_mix.orng:12:25: error: mixed positional and named arguments are not allowed
//     let x = My_Type(.x = 4, 5)
//                        ^
// 

struct My_Type {
    x: Int
    y: Int
}

fn main() -> Int {
    let x = My_Type(.x = 4, 5)
    x.x
}